# zh_trashbot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ReadMe.md  config.ini.example  cspell.config.yaml  pyproject.toml  requirements.txt
src/: echobot.py  trashbot.py
src/zh_trashbot/: bot.py
